# django-object-lock

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  tox.ini
demo/: runtests.py
demo/articles/: admin.py  api.py  apps.py  models.py
demo/articles/migrations/: 0001_initial.py  0002_rename_is_locked_article_is_locked_flag.py  0003_notlockedmodel.py
demo/articles_nonlockable/: admin.py  apps.py  models.py
demo/articles_nonlockable/migrations/: 0001_initial.py  0002_notimplementedmodel.py
demo/config/: asgi.py  settings.py  urls.py  wsgi.py
demo/tests/: test_admin_locking.py  test_api_locking.py  test_model_locking.py  test_non_model_lockable_admin_locking.py
docs/: admin-locking.md  api-locking.md  changelog.md  conf.py  demo.md  index.md  installation.md  model-locking.md  settings.md
requirements/: requirements-dev.in  requirements-dev.txt
src/django_object_lock/: admin.py  apps.py  exceptions.py  mixins.py  models.py  settings.py
src/django_object_lock/admin/: __init__.py  views.py
src/django_object_lock/api/: exceptions.py  mixins.py
src/django_object_lock/static/django_object_lock/css/: admin.css
src/django_object_lock/templates/django_object_lock/: admin_lock.html  admin_unlock.html
